# esp-csp

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/libcsp/: CMakeLists.txt
components/libcsp/contrib/atomics/: atomics_freertos_gcc.c
components/libcsp/include/csp/: csp.h  csp_autoconfig.h  csp_debug.h  csp_types.h
components/libcsp/include/csp/arch/: csp_queue.h
components/libcsp/src/: csp_conn.c  csp_conn.h  csp_crc32.c  csp_debug.c  csp_iflist.c  csp_init.c  csp_port.c  csp_qfifo.c  csp_queue.c  csp_rdp.c  csp_rdp.h  csp_rtable_stdio.c  csp_semaphore.c  csp_semaphore.h  csp_service_handler.c  csp_services.c  csp_system.c  csp_time.c
components/libparam/: CMakeLists.txt  Kconfig
components/libparam/include/: libparam.h
components/libparam/include/param/: param.h
components/libparam/src/param/: param.c  param_server.c  param_string.c
components/libparam/src/param/list/: param_list.c  param_list_slash.c
components/libparam/src/vmem/: vmem_client.c  vmem_server.c
main/: CMakeLists.txt  Kconfig.projbuild  chip_init.c  chip_init.h  csp_hooks.c  csp_if_lora.c  csp_if_lora.h  main.c  param_config.h  wifi.c
main/lora/: csp_if_lora.c  csp_if_lora.h  lora.c  lora.h
main/udp/: csp_if_udp.c  csp_if_udp.h
main/vmem/: vmem_flash.c  vmem_flash.h
